# TMS_DRF_Project

./: .gitignore  docker-compose.yaml  manage.py  pyproject.toml
DjangoProjectCeleryTest/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/: admin.py  models.py  tasks.py
app/api/: filters.py  serializers.py  services.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_tag_post_tags.py  0003_alter_tag_name.py
